Bug 1321875: Fix relative lifetimes of lpAttributeList and handlesToInherit in LaunchApp. r=aklotz

CreateThreadAttributeList warns:

// Note that the pointer to the HANDLE array ends up embedded in the result of
// this function and must stay alive until FreeThreadAttributeList is called,
// hence it is passed in so the owner is the caller of this function.

but the caller was passing a |handlesToInherit| that was declared inside a block scope that ends before we're finished using lpAttributeList.

This happened to work on MSVC but leads to badness under clang-cl.

+ Bonus fix for a sometimes-uninitialized warning in CreateThreadAttributeList.

MozReview-Commit-ID: 6uu3ICjfj5k